# kyuun

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: clippy.yml  release.yml
src/: api.rs  args.rs  config.rs  main.rs
