[package]
name = "kyuun"
version = "0.1.0"
description = "A simple Spotify playlist analyzer"
authors = ["fawn <fawn@envs.net>"]
license = "ISC"
repository = "https://github.com/fawni/kyuun"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }

confy = "0.5.1"
serde = { version = "1.0.160", features = ["derive"] }
dialoguer = "0.10.4"

clap = { version = "4.2.4", features = ["derive"] }
miette = { version = "5.8.0", features = ["fancy"] }
owo-colors = "3.5.0"

warp = "0.3.4"
webbrowser = "0.8.9"
chrono = "0.4.24"

[profile.release]
lto = true
strip = true
codegen-units = 1
